Fix spacing in header and hero sections

--- a/style.css
+++ b/style.css
@@ -14,15 +14,24 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 32px 0px 32px;
 }
 
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
+    padding: 16px;
 }
 
 .hero, footer, .header {
     background: #1F2937;
+}
+
+.hero {
+    display: flex;
+    padding: 128px;
+    align-items: center;
+    justify-content: center;
 }
 
 .heroMain {
@@ -34,6 +43,18 @@ body {
 .hero2nd {
     font-size: 18px;
     color: #e5e7eb;
+    padding: 16px 0px;
+}
+
+.heroContent {
+    flex-basis: 500px;
+    margin-right: 48px;
+}
+
+.heroImage {
+    width: 500px;
+    height: 300px;
+    background: #3882F6;
 }
 
 button {
@@ -41,6 +62,9 @@ button {
     color:#f9faf8;
     font-size: 18px;
     font-weight: 900;
+    padding: 8px 32px 8px 32px;
+    border-radius: 8px;
+    border: none;
 }
 
 ul {
@@ -54,4 +78,8 @@ a {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
+}
+
+li {
+    padding: 24px;
 }
